--- a/css/HomepageStylesheet.css
+++ b/css/HomepageStylesheet.css
@@ -153,35 +153,7 @@ text-align:center;
   padding-right: 25px;
 }
 
-.col-2{
-  flex-basis: 25%;
-  padding: 10px;
-  min-width: 200px;
-  margin-bottom: 50px;
-  display: inline-block;
-  transition: transform 0.5s;
-}
 
-.col-2:hover{
-  transform: translateY(-5px);
-}
-
-.col-2 img{
-  width: 100%;
-}
-
-.col-text{
-  text-align: center;
-}
-.col-text a{
-  text-decoration: none;
-  color: black;
-}
-
-.price{
-  text-align: center;
-  color: red;
-}
 
 .title{
   text-align: center;
@@ -217,7 +189,26 @@ text-align:center;
 
 }
 
+.small-container ul{
+  list-style-type: none;
+  
+}
 
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 160px;
+}
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
 
 
  /* Cookie */
