--- a/css/Browse_Stores.css
+++ b/css/Browse_Stores.css
@@ -5,7 +5,7 @@
 header{
   top: 0;
   position: sticky;
-  clear: both;
+  /* clear: both; */
   /* float: left; */
   background-color: whitesmoke ;
 }
@@ -56,12 +56,12 @@ footer{
   }
   #right {
 
-margin-top:10px;
+    margin-top:10px;
     width: 15%;
     float: right;
-margin-bottom:10px;
-height:100%;
-text-align:center;
+    margin-bottom:10px;
+    height:100%;
+    text-align:center;
   }
 
   main{
@@ -146,13 +146,7 @@ text-align:center;
   margin-top: 70px;
 }
 
-.small-container{
-  /* max-width: 1080px;
-  max-height: 1085px;
-  margin:auto;
-  padding-left: 25px;
-  padding-right: 25px; */
-}
+
 
 .col-2{
   flex-basis: 25%;
@@ -217,6 +211,7 @@ text-align:center;
  background: radial-gradient(#fff, #ffd6d6) ;
 
 }
+/* display */
 
 .small-container{
   max-width: 1080px;
@@ -240,6 +235,7 @@ text-align:center;
   list-style-type: none;
   float: left;
   width: 160px;
+  height: 200px;
   text-align: center;
   margin-bottom: 3px;
   margin-right: 3px;
@@ -248,7 +244,6 @@ text-align:center;
 }
 .small-container li:hover{
   background: gray;
-
 }
 
 .small-container h2{
@@ -263,6 +258,42 @@ text-align:center;
   width: 1000px;
   height: 500px;
 }
+
+.browse_name{
+  margin:auto;
+  padding-left:200px;
+}
+
+.browse_name button{
+  font-size: 13px;
+  text-align: center;
+}
+
+/* .browse_stores {
+  max-width: 1080px;
+  max-height: 1085px;
+  margin:auto;
+  padding-left: 25px;
+  padding-right: 25px;
+} */
+
+
+
+/* Browse_category */
+.Browse_category {
+    margin:auto;
+    /* padding-left: 200px; */
+    text-align: center;
+}
+
+.Browse_category label{
+  padding: 8px;
+  font-size: 24px;
+}
+
+
+
+
 
 
  /* Cookie */
@@ -298,22 +329,3 @@ text-align:center;
         color: black;
         padding-left: 50px;
       }
-
-
-.browse_name{
-  margin:auto;
-  padding-left:200px;
-}
-
-.browse_name button{
-  font-size: 13px;
-  text-align: center;
-}
-
-/* .browse_stores {
-  max-width: 1080px;
-  max-height: 1085px;
-  margin:auto;
-  padding-left: 25px;
-  padding-right: 25px;
-} */
